--- a/README.org
+++ b/README.org
@@ -21,6 +21,7 @@
 | media-sound/csound-aeolus         |                                        |
 | media-sound/dexed                 | from audiodef/gentoostudio             |
 | media-sound/f0plugins             |                                        |
+| media-sound/pcaudiolib            | for espeak-ng                          |
 | media-sound/reaper                | media-libs/libswell                    |
 | media-sound/supercollider-plugins | handles [[https://github.com/supercollider/sc3-plugins/issues/134][#134]]                           |
 | net-misc/matterbridge             |                                        |
