--- a/README.org
+++ b/README.org
@@ -1,20 +1,22 @@
 * Overlay
 
 ** Forked from portage
-| Package                   | Details                                      |
-|---------------------------+----------------------------------------------|
-| media-plugins/hexter      | bump version                                 |
-| media-sound/aeolus        | use virtual/jack                             |
-| media-sound/csound        | use virtual/jack                             |
-| media-sound/supercollider | backporting versions and patches [[https://github.com/supercollider/supercollider/issues/1209][#1209]] [[https://github.com/supercollider/supercollider/issues/2144][#2144]] |
+| Package                   | Details                                                                                                        |
+|---------------------------+----------------------------------------------------------------------------------------------------------------|
+| media-plugins/hexter      | bump version                                                                                                   |
+| media-sound/aeolus        | use virtual/jack                                                                                               |
+| media-sound/csound        | use virtual/jack                                                                                               |
+| media-sound/supercollider | backporting versions and patches [[https://github.com/supercollider/supercollider/issues/1209][#1209]] [[https://github.com/supercollider/supercollider/issues/2144][#2144]]  and version 9999 which kills .so support with bundled libs [[https://github.com/supercollider/supercollider/issues/4183][#4183]] |
+
 ** Missing on portage
 | Package                           | Details                                |
 |-----------------------------------+----------------------------------------|
 | app-doc/stdman                    | from zhou13 overlay                    |
 | app-misc/inscore                  | media-libs/guidoar media-libs/guidolib |
-| dev-games/raylib                  | copy from clx overlay                  |
-| dev-games/godot                   | fork from Drauthius overlay + .NET     |
 | dev-games/amulet                  | forced rebuild of sdl                  |
+| dev-games/godot                   | fork from Drauthius overlay + .NET     |
+| dev-games/ode                     | add 9999                               |
+| dev-games/raylib                  | copy from clx overlay                  |
 | dev-python/pytesseract            |                                        |
 | dev-python/scrapyd                |                                        |
 | dev-util/rebar3                   |                                        |
